# demos-data-engineering

./: README.md
airflow/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
airflow/config/: airflow.cfg
airflow/dags/: etl_pokemon.py
airflow/dags/utils/: pokemon_api.py  s3.py
minio_s3/: .env.example  .gitignore  Makefile  README.md  compose.yaml
server_fastapi/: .dockerignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
server_fastapi/src/: main.py
server_fastapi/src/models/: common.py
spark/: .env.example  Makefile  README.md  compose.yaml
