[project]
name = "airflow-dags"
version = "0.1.0"
description = "Airflow DAGs and dependencies"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.4",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "apache-airflow-providers-amazon>=9.10.0",
]

[dependency-groups]
dev = ["apache-airflow>=3.0.3", "ruff>=0.12.5"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["F401"]
